--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,7 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@custom-variant dark (&:is(.dark *));
+/* Allow using `dark:` inside @apply rules. Keep this near the top. */
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
   --font-*: initial;
@@ -131,7 +132,6 @@
   --color-warning-950: #4e1d09;
 
   --color-theme-pink-500: #ee46bc;
-
   --color-theme-purple-500: #7a5af8;
 
   --shadow-theme-md:
@@ -167,16 +167,8 @@
   --z-index-999999: 999999;
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
+/* Base resets and defaults */
 @layer base {
-
   *,
   ::after,
   ::before,
@@ -195,6 +187,7 @@
   }
 }
 
+/* Reusable menu utilities */
 @utility menu-item {
   @apply relative flex items-center w-full gap-3 px-3 py-2 font-medium rounded-lg text-theme-sm;
 }
@@ -255,42 +248,35 @@
   @apply bg-brand-50 group-hover:bg-brand-100 dark:bg-brand-500/15 dark:group-hover:bg-brand-500/20;
 }
 
+/* Scrollbar helpers */
 @utility no-scrollbar {
-
-  /* Chrome, Safari and Opera */
   &::-webkit-scrollbar {
     display: none;
   }
-
   -ms-overflow-style: none;
-  /* IE and Edge */
   scrollbar-width: none;
-  /* Firefox */
 }
 
 @utility custom-scrollbar {
   &::-webkit-scrollbar {
     @apply size-1.5;
   }
-
   &::-webkit-scrollbar-track {
     @apply rounded-full;
   }
-
   &::-webkit-scrollbar-thumb {
     @apply bg-gray-200 rounded-full dark:bg-gray-700;
   }
 }
 
+/* For WebKit when dark class is toggled at root */
 .dark .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #344054;
 }
 
-
-
+/* Small utility layer */
 @layer utilities {
-
-  /* For Remove Date Icon */
+  /* Remove native icons from date/time inputs */
   input[type="date"]::-webkit-inner-spin-button,
   input[type="time"]::-webkit-inner-spin-button,
   input[type="date"]::-webkit-calendar-picker-indicator,
@@ -300,21 +286,24 @@
   }
 }
 
-/* third-party libraries CSS */
+/* Third-party libraries styling */
+
+/* ApexCharts */
 .apexcharts-legend-text {
-  @apply !text-gray-700 dark: !text-gray-400;
+  @apply !text-gray-700 dark:!text-gray-400;
 }
 
 .apexcharts-text {
-  @apply !fill-gray-700 dark: !fill-gray-400;
+  @apply !fill-gray-700 dark:!fill-gray-400;
 }
 
 .apexcharts-tooltip.apexcharts-theme-light {
-  @apply gap-1 !rounded-lg !border-gray-200 p-3 !shadow-theme-sm dark: !border-gray-800 dark: !bg-gray-900;
+  @apply gap-1 !rounded-lg !border-gray-200 p-3 !shadow-theme-sm dark:!border-gray-800 dark:!bg-gray-900;
 }
 
-.apexcharts-legend-text {
-  @apply pl-5 ! !text-gray-700 dark: !text-gray-400;
+/* When legend needs left padding and proper colors */
+.apexcharts-legend-text.with-pad {
+  @apply pl-5 !text-gray-700 dark:!text-gray-400;
 }
 
 .apexcharts-tooltip-series-group {
@@ -326,11 +315,11 @@
 }
 
 .apexcharts-tooltip-title {
-  @apply !mb-0 !border-b-0 !bg-transparent !p-0 !text-[10px] !leading-4 !text-gray-800 dark: !text-white/90;
+  @apply !mb-0 !border-b-0 !bg-transparent !p-0 !text-[10px] !leading-4 !text-gray-800 dark:!text-white/90;
 }
 
 .apexcharts-tooltip-text {
-  @apply !text-theme-xs !text-gray-700 dark: !text-white/90;
+  @apply !text-theme-xs !text-gray-700 dark:!text-white/90;
 }
 
 .apexcharts-tooltip-text-y-value {
@@ -338,15 +327,16 @@
 }
 
 .apexcharts-gridline {
-  @apply !stroke-gray-100 dark: !stroke-gray-800;
+  @apply !stroke-gray-100 dark:!stroke-gray-800;
 }
 
+/* Flatpickr */
 .flatpickr-wrapper {
   @apply w-full;
 }
 
 .flatpickr-calendar {
-  @apply mt-2 !bg-white !rounded-xl !p-5 !border !border-gray-200 dark: !border-gray-800 !text-gray-500 dark: !bg-gray-dark dark: !text-gray-400 dark: !shadow-theme-xl 2xsm: !w-auto;
+  @apply mt-2 !bg-white !rounded-xl !p-5 !border !border-gray-200 dark:!border-gray-800 dark:!bg-gray-dark dark:!text-gray-400 dark:!shadow-theme-xl 2xsm:!w-auto;
 }
 
 .flatpickr-months .flatpickr-prev-month:hover svg,
@@ -365,7 +355,7 @@
 
 .flatpickr-current-month .cur-month,
 .flatpickr-current-month input.cur-year {
-  @apply !h-auto !pt-0 !text-lg !font-medium !text-gray-800 dark: !text-white/90;
+  @apply !h-auto !pt-0 !text-lg !font-medium !text-gray-800 dark:!text-white/90;
 }
 
 .flatpickr-prev-month,
@@ -378,11 +368,11 @@
 }
 
 .flatpickr-weekday {
-  @apply !text-theme-sm !font-medium !text-gray-500 dark: !text-gray-400 !bg-transparent;
+  @apply !text-theme-sm !font-medium !text-gray-500 dark:!text-gray-400 !bg-transparent;
 }
 
 .flatpickr-day {
-  @apply !flex !items-center !text-theme-sm !font-medium !text-gray-800 dark: !text-white/90 dark:hover: !border-gray-300 dark:hover: !bg-gray-900;
+  @apply !flex !items-center !text-theme-sm !font-medium !text-gray-800 dark:!text-white/90 dark:hover:!border-gray-300 dark:hover:!bg-gray-900;
 }
 
 .flatpickr-day.nextMonthDay,
@@ -390,7 +380,7 @@
   @apply !text-gray-400;
 }
 
-.flatpickr-months>.flatpickr-month {
+.flatpickr-months > .flatpickr-month {
   background: none !important;
 }
 
@@ -408,7 +398,7 @@
 
 .flatpickr-months .flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month {
-  @apply !top-7 dark: !fill-white dark: !text-white !bg-transparent;
+  @apply !top-7 dark:!fill-white dark:!text-white !bg-transparent;
 }
 
 .flatpickr-months .flatpickr-prev-month.flatpickr-prev-month,
@@ -425,22 +415,20 @@
   @apply !border-0;
 }
 
+/* Example kept off to avoid accidental overrides
 span.flatpickr-weekday,
 .flatpickr-months .flatpickr-month {
-  @apply dark: !fill-white dark: !text-white !bg-none;
+  @apply dark:!fill-white dark:!text-white !bg-none;
 }
+*/
 
+.flatpickr-inner-container,
 .flatpickr-innerContainer {
   @apply !border-b-0;
 }
 
 .flatpickr-months .flatpickr-month {
   @apply !bg-none;
-}
-
-.flatpickr-day.inRange {
-  box-shadow: -5px 0 0 #f9fafb, 5px 0 0 #f9fafb !important;
-  @apply dark: !shadow-datepicker;
 }
 
 .flatpickr-day.inRange,
@@ -455,14 +443,13 @@ span.flatpickr-weekday,
 .flatpickr-day:focus,
 .flatpickr-day.prevMonthDay:focus,
 .flatpickr-day.nextMonthDay:focus {
-  @apply !border-gray-50 !bg-gray-50 dark: !border-0 dark: !border-white/5 dark: !bg-white/5;
+  @apply !border-gray-50 !bg-gray-50 dark:!border-0 dark:!border-white/5 dark:!bg-white/5;
 }
 
 .flatpickr-day.selected,
 .flatpickr-day.startRange,
-.flatpickr-day.selected,
 .flatpickr-day.endRange {
-  @apply !text-white dark: !text-white;
+  @apply !text-white dark:!text-white;
 }
 
 .flatpickr-day.selected,
@@ -484,31 +471,16 @@ span.flatpickr-weekday,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
   background: #465fff;
-  @apply !border-brand-500 !bg-brand-500 hover: !border-brand-50 hover: !bg-brand-500;
+  @apply !border-brand-500 !bg-brand-500 hover:!border-brand-50 hover:!bg-brand-500;
 }
 
-.flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.startRange.startRange+.endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n + 1)) {
+.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n + 1)) {
   box-shadow: -10px 0 0 #465fff;
 }
 
-.flatpickr-months .flatpickr-prev-month svg,
-.flatpickr-months .flatpickr-next-month svg,
-.flatpickr-months .flatpickr-prev-month,
-.flatpickr-months .flatpickr-next-month {
-  @apply hover: !fill-none;
-}
-
-.flatpickr-months .flatpickr-prev-month:hover svg,
-.flatpickr-months .flatpickr-next-month:hover svg {
-  fill: none !important;
-}
-
-.flatpickr-calendar.static {
-  @apply right-0;
-}
-
+/* FullCalendar */
 .fc .fc-view-harness {
   @apply max-w-full overflow-x-auto custom-scrollbar;
 }
@@ -517,7 +489,7 @@ span.flatpickr-weekday,
   @apply min-w-[718px];
 }
 
-.fc .fc-scrollgrid-section>* {
+.fc .fc-scrollgrid-section > * {
   border-right-width: 0;
   border-bottom-width: 0;
 }
@@ -535,7 +507,7 @@ span.flatpickr-weekday,
 }
 
 .fc-button-group .fc-button {
-  @apply flex h-10 w-10 items-center justify-center !rounded-lg border border-gray-200 bg-transparent hover:border-gray-200 hover:bg-gray-50 focus:shadow-none active: !border-gray-200 active: !bg-transparent active: !shadow-none dark:border-gray-800 dark:hover:border-gray-800 dark:hover:bg-gray-900 dark:active:border-gray-800 !;
+  @apply flex h-10 w-10 items-center justify-center !rounded-lg border border-gray-200 bg-transparent hover:border-gray-200 hover:bg-gray-50 focus:shadow-none active:!border-gray-200 active:!bg-transparent active:!shadow-none dark:border-gray-800 dark:hover:border-gray-800 dark:hover:bg-gray-900 dark:active:border-gray-800;
 }
 
 .fc-button-group .fc-button.fc-prev-button:before {
@@ -561,7 +533,7 @@ span.flatpickr-weekday,
 }
 
 .fc-addEventButton-button {
-  @apply !rounded-lg !border-0 !bg-brand-500 !px-4 !py-2.5 !text-sm !font-medium hover: !bg-brand-600 focus: !shadow-none;
+  @apply !rounded-lg !border-0 !bg-brand-500 !px-4 !py-2.5 !text-sm !font-medium hover:!bg-brand-600 focus:!shadow-none;
 }
 
 .fc-toolbar-title {
@@ -573,20 +545,16 @@ span.flatpickr-weekday,
 }
 
 .fc-header-toolbar.fc-toolbar .fc-toolbar-chunk:last-child .fc-button {
-  @apply !h-auto !w-auto rounded-md !border-0 bg-transparent !px-5 !py-2 text-sm font-medium text-gray-500 hover:text-gray-700 focus:shadow-none ! dark:text-gray-400;
-}
-
-.fc-header-toolbar.fc-toolbar .fc-toolbar-chunk:last-child .fc-button.fc-button-active {
-  @apply text-gray-900 bg-white dark:bg-gray-800 dark:text-white;
+  @apply !h-auto !w-auto rounded-md !border-0 bg-transparent !px-5 !py-2 text-sm font-medium text-gray-500 hover:text-gray-700 focus:shadow-none dark:text-gray-400;
 }
 
 .fc-theme-standard th {
-  @apply !border-x-0 border-t !border-gray-200 bg-gray-50 !text-left dark: !border-gray-800 dark:bg-gray-900;
+  @apply !border-x-0 border-t !border-gray-200 bg-gray-50 !text-left dark:!border-gray-800 dark:bg-gray-900;
 }
 
 .fc-theme-standard td,
 .fc-theme-standard .fc-scrollgrid {
-  @apply !border-gray-200 dark: !border-gray-800;
+  @apply !border-gray-200 dark:!border-gray-800;
 }
 
 .fc .fc-col-header-cell-cushion {
@@ -691,12 +659,14 @@ span.flatpickr-weekday,
   @apply min-h-screen;
 }
 
+/* Inputs */
 .input-date-icon::-webkit-inner-spin-button,
 .input-date-icon::-webkit-calendar-picker-indicator {
   opacity: 0;
   -webkit-appearance: none;
 }
 
+/* Swiper */
 .stocks-slider-outer .swiper-button-next:after,
 .stocks-slider-outer .swiper-button-prev:after {
   @apply hidden;
@@ -704,7 +674,7 @@ span.flatpickr-weekday,
 
 .stocks-slider-outer .swiper-button-next,
 .stocks-slider-outer .swiper-button-prev {
-  @apply !static mt-0 h-8 w-9 rounded-full border dark:hover:bg-white/[0.05] border-gray-200 !text-gray-700 transition hover:bg-gray-100 dark:border-white/[0.03] dark:bg-gray-800 dark: !text-gray-400 dark:hover: !text-white/90;
+  @apply !static mt-0 h-8 w-9 rounded-full border border-gray-200 text-gray-700 transition hover:bg-gray-100 dark:border-white/[0.03] dark:bg-gray-800 dark:text-gray-400 dark:hover:text-white/90;
 }
 
 .stocks-slider-outer .swiper-button-next.swiper-button-disabled,
@@ -740,22 +710,22 @@ span.flatpickr-weekday,
 .carouselTwo .swiper-button-prev,
 .carouselFour .swiper-button-next,
 .carouselFour .swiper-button-prev {
-  @apply h-10 w-10 rounded-full border-[0.5px] border-white/10 bg-white/90 !text-gray-700 shadow-slider-navigation backdrop-blur-[10px];
+  @apply h-10 w-10 rounded-full border-[0.5px] border-white/10 bg-white/90 text-gray-700 shadow-slider-navigation backdrop-blur-[10px];
 }
 
 .carouselTwo .swiper-button-prev,
 .carouselFour .swiper-button-prev {
-  @apply !left-3 sm: !left-4;
+  @apply !left-3 sm:!left-4;
 }
 
 .carouselTwo .swiper-button-next,
 .carouselFour .swiper-button-next {
-  @apply !right-3 sm: !right-4;
+  @apply !right-3 sm:!right-4;
 }
 
 .carouselThree .swiper-pagination,
 .carouselFour .swiper-pagination {
-  @apply !bottom-3 !left-1/2 inline-flex !w-auto -translate-x-1/2 items-center gap-1.5 rounded-[40px] border-[0.5px] border-white/10 bg-white/60 px-2 py-1.5 shadow-slider-navigation backdrop-blur-[10px] sm: !bottom-5;
+  @apply !bottom-3 !left-1/2 inline-flex !w-auto -translate-x-1/2 items-center gap-1.5 rounded-[40px] border-[0.5px] border-white/10 bg-white/60 px-2 py-1.5 shadow-slider-navigation backdrop-blur-[10px] sm:!bottom-5;
 }
 
 .carouselThree .swiper-pagination-bullet,
@@ -768,16 +738,17 @@ span.flatpickr-weekday,
   @apply w-6.5 rounded-xl;
 }
 
+/* jVectorMap */
 .jvectormap-container {
-  @apply !bg-gray-50 dark: !bg-gray-900;
+  @apply !bg-gray-50 dark:!bg-gray-900;
 }
 
 .jvectormap-region.jvectormap-element {
-  @apply !fill-gray-300 hover: !fill-brand-500 dark: !fill-gray-700 dark:hover: !fill-brand-500;
+  @apply !fill-gray-300 hover:!fill-brand-500 dark:!fill-gray-700 dark:hover:!fill-brand-500;
 }
 
 .jvectormap-marker.jvectormap-element {
-  @apply !stroke-gray-200 dark: !stroke-gray-800;
+  @apply !stroke-gray-200 dark:!stroke-gray-800;
 }
 
 .jvectormap-tip {
@@ -789,32 +760,33 @@ span.flatpickr-weekday,
   @apply !hidden;
 }
 
-.form-check-input:checked~span {
+/* Form helpers */
+.form-check-input:checked ~ span {
   @apply border-[6px] border-brand-500 bg-brand-500 dark:border-brand-500;
 }
 
-.taskCheckbox:checked~.box span {
+.taskCheckbox:checked ~ .box span {
   @apply opacity-100 bg-brand-500;
 }
 
-.taskCheckbox:checked~p {
+.taskCheckbox:checked ~ p {
   @apply text-gray-400 line-through;
 }
 
-.taskCheckbox:checked~.box {
+.taskCheckbox:checked ~ .box {
   @apply border-brand-500 bg-brand-500 dark:border-brand-500;
 }
 
+/* Small visual polish for draggable tasks */
 .task {
   transition: all 0.2s ease;
-  /* Smooth transition for visual effects */
 }
 
 .task {
   border-radius: 0.75rem;
-  box-shadow: 0 1px 3px 0 rgba(16, 24, 40, 0.1),
+  box-shadow:
+    0 1px 3px 0 rgba(16, 24, 40, 0.1),
     0 1px 2px 0 rgba(16, 24, 40, 0.06);
   opacity: 0.8;
   cursor: grabbing;
-  /* Changes the cursor to indicate dragging */
 }
